# detector_erc20

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
detector/core/token_standards/: base_comparer.py  signatures.py
detector/detector/: celery.py  settings.py  urls.py
detector/erc20/: apps.py  comparer.py  models.py  tasks.py
detector/erc20/management/commands/: fill_contracts.py
detector/erc20/migrations/: 0001_initial.py
