[tool.poetry]
name = "detector-erc20"
version = "0.1.0"
description = ""
authors = ["Selivonchyk <selivonchyk_nikolay@mail.r>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
commitizen = "^3.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
